WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55739
REGRESSION (
r80307
): Lots of tests crashing in BackingStore::paint
https://bugs.webkit.org/show_bug.cgi?id=55739
Summary
REGRESSION (r80307): Lots of tests crashing in BackingStore::paint
Adam Roben (:aroben)
Reported
2011-03-03 18:59:01 PST
REGRESSION (
r80307
): Lots of tests crashing in BackingStore::paint
Attachments
Patch
(1.70 KB, patch)
2011-03-03 18:59 PST
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-03-03 18:59:25 PST
Created
attachment 84679
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-03-03 19:01:47 PST
Committed
r80309
: <
http://trac.webkit.org/changeset/80309
>
WebKit Review Bot
Comment 3
2011-03-03 19:57:12 PST
http://trac.webkit.org/changeset/80309
might have broken SnowLeopard Intel Release (WebKit2 Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug