Don't assume the web process has had a chance to paint before the view has to paint

Fixes <http://webkit.org/b/55739> REGRESSION (r80307): Lots of tests crashing in
BackingStore::paint

Reviewed by Anders Carlsson.

* UIProcess/DrawingAreaProxyImpl.cpp:
(WebKit::DrawingAreaProxyImpl::paint): Bail if the web process hasn't had a chance to paint
yet.

Canonical link: https://commits.webkit.org/70203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80309 268f45cc-cd09-0410-ab3c-d52691b4dbfc